kubernetes/20-apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: bibliopro
  labels:
    app: apache
    version: 1.0.7
spec:
  selector:
    matchLabels:
      app: apache
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: apache-pvc
      labels:
        app: apache
        version: "1.0.7"
    spec:
      securityContext:
        fsGroup: 65533 # to make SSH key readable
      terminationGracePeriodSeconds: 30
      containers:
      - image: registry.io.imim.cloud/bibliopro:1.2
        name: webserver
        volumeMounts:
        - name: apache-pvc
          mountPath: /var/www/html
          subPath: data4/bibliopro/src
        - name: apache-pvc
          mountPath: /data
         #securityContext:
         #runAsUser: 104 # git-sync user
      imagePullSecrets:
      - name: registryioimimcloud
      volumes:
      - name: apache-pvc
        persistentVolumeClaim:
          claimName: apache-addoms-claim
      - name: git-secret
        secret:
          secretName: git-secret
          defaultMode: 0400
