kubernetes/20-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: bibliopro
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: mysql-persistent-storage
      labels:
        app: mysql
    spec:
      containers:
      - image: mariadb:10.1
        name: biblioprodb
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql/
          subPath: data
        - name: initdb
          mountPath: /docker-entrypoint-initdb.d
      imagePullSecrets:
      - name: registryioimimcloud
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: initdb
        emptyDir: {}
