kubernetes/01-bibliopro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bibliopro
  namespace: bibliopro
  labels:
    app: apache
spec:
  ports:
    - port: 80
      name: tcp-80
    - port: 443
      name: tcp-443
  selector:
    app: apache
